<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/ic_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_login" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:onClick="loginToRest"
        android:text="@string/login_label"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTagline2"
        android:layout_alignStart="@+id/tvTagline2"
        android:layout_centerVertical="true"
        android:text="@string/welcome_to_twitter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color" />

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/tag_line"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color" />

    <TextView
        android:id="@+id/tvTagline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTagline"
        android:layout_centerHorizontal="true"
        android:text="@string/tag_line2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color" />

</RelativeLayout>